...
            val context = LocalContext.current

            val (titleLayout, descriptionLayout, allowButton, cancelButton) = createRefs()

            // Title text
            Text(
                text = "Location access permission denied.",
                style = MaterialTheme.typography.labelSmall,
                modifier = Modifier
                    .constrainAs(titleLayout) {
                        bottom.linkTo(descriptionLayout.top)
                        start.linkTo(parent.start)
                    }
...
                colors = ButtonDefaults.textButtonColors(
                    containerColor = Color.Black,
                    contentColor = Color.White
                )
            ) {
                Text(
                    text = "Open Settings",
                    style = MaterialTheme.typography.bodySmall
                )
            }

            // Exit button
            Button(
...
