...
            Spacer(modifier = Modifier.height(5.dp))
            Text(
                modifier = Modifier
                    .clickable {
                        retry.invoke()
                    },
                text = "Retry",
                style = MaterialTheme.typography.bodySmall.copy(textDecoration = TextDecoration.Underline)
            )
        }
    }
}

...
